renamed logo images to prevent answers being visible as the image name and added text to index.html to make it clear that the you will be registered on first login as the form acts as both a login and register form

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -281,6 +281,12 @@ nav div {
 *   FORM CONTENT - LEFT
 *===================*/
 
+#disclaimer {
+    position: relative;
+    top: 15px;
+    font-size: 0.7rem;
+}
+
 .index-left input[type='text'],
 .index-left input[type='password'] {
     width: 100%;
